// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsHeader can render 1`] = `
<div
  className=
      ms-FocusZone
      ms-DetailsHeader
      &:focus {
        outline: none;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        border-bottom: 1px solid #edebe9;
        box-sizing: content-box;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        height: 42px;
        line-height: 42px;
        min-width: 100%;
        padding-bottom: 1px;
        padding-top: 16px;
        position: relative;
        user-select: none;
        vertical-align: top;
        white-space: nowrap;
      }
      &:hover .ms-DetailsHeader-check {
        opacity: 1;
      }
      & .ms-TooltipHost .ms-DetailsHeader-checkTooltip {
        display: block;
      }
  data-automationid="DetailsHeader"
  data-focuszone-id="FocusZone1"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  onMouseMove={[Function]}
  role="row"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <div
    aria-colindex={1}
    aria-labelledby="header0-check"
    className=
        ms-DetailsHeader-cell
        ms-DetailsHeader-cellIsCheck
        {
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          outline: transparent;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
    onClick={[Function]}
    role="columnheader"
  >
    <span
      className=
          ms-DetailsHeader-checkTooltip

    >
      <div
        aria-checked={false}
        className=
            ms-DetailsRow-check
            ms-DetailsHeader-check
            ms-DetailsRow-check--isHeader
            ms-Check-checkHost
            {
              height: 42px;
            }
            .ms-Fabric--isFocusVisible &:focus {
              opacity: 1;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              background: none;
              border: none;
              box-sizing: border-box;
              cursor: default;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              height: 42px;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              outline: transparent;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              vertical-align: top;
              width: 48px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-automationid="DetailsRowCheck"
        data-is-focusable={true}
        data-selection-toggle={true}
        id="header0-check"
        role="checkbox"
      >
        <div
          className=
              ms-Check
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 18px;
                line-height: 1;
                position: relative;
                user-select: none;
                vertical-align: top;
                width: 18px;
              }
              &:before {
                background: #ffffff;
                border-radius: 50%;
                bottom: 1px;
                content: "";
                left: 1px;
                opacity: 1;
                position: absolute;
                right: 1px;
                top: 1px;
              }
              .ms-Check-checkHost:hover & {
                opacity: 1;
              }
              .ms-Check-checkHost:focus & {
                opacity: 1;
              }
              &:hover {
                opacity: 1;
              }
              &:focus {
                opacity: 1;
              }
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Check-circle
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #605e5c;
                  font-size: 18px;
                  height: 18px;
                  left: 0px;
                  position: absolute;
                  text-align: center;
                  top: 0px;
                  vertical-align: middle;
                  width: 18px;
                }
                @media screen and (-ms-high-contrast: active){& {
                  color: WindowText;
                }
            data-icon-name="CircleRing"
            role="presentation"
          >
            
          </i>
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Check-check
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #605e5c;
                  font-size: 16px;
                  height: 18px;
                  left: .5px;
                  opacity: 0;
                  position: absolute;
                  text-align: center;
                  top: 0px;
                  vertical-align: middle;
                  width: 18px;
                }
                &:hover {
                  opacity: 1;
                }
                @media screen and (-ms-high-contrast: active){& {
                  -ms-high-contrast-adjust: none;
                }
            data-icon-name="StatusCircleCheckmark"
            role="presentation"
          >
            
          </i>
        </div>
      </div>
    </span>
  </div>
  <div
    aria-colindex={2}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="a"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-haspopup={false}
        aria-labelledby="header0-a-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header0-a"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header0-a-name"
        >
          a
        </span>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={3}
    aria-sort="ascending"
    className=
        ms-DetailsHeader-cell
        is-actionable
        is-icon-visible
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="b"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-haspopup={false}
        aria-labelledby="header0-b-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header0-b"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header0-b-name"
        >
          b
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #605e5c;
                opacity: 1;
                padding-left: 4px;
                position: relative;
                top: 1px;
              }
          data-icon-name="SortUp"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={4}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="c"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 30,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-expanded={false}
        aria-haspopup={true}
        aria-labelledby="header0-c-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header0-c"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header0-c-name"
        >
          c
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-DetailsHeader-filterChevron
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #a19f9d;
                font-size: 12px;
                padding-left: 6px;
                vertical-align: middle;
              }
          data-icon-name="ChevronDown"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0px;
          margin-left: -16px;
          margin-right: 0px;
          margin-top: 0px;
        }
    data-is-focusable={false}
    data-sizer-index={2}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
</div>
`;

exports[`DetailsHeader can render a hidden select all checkbox in single selection mode 1`] = `
<div
  className=
      ms-FocusZone
      ms-DetailsHeader
      &:focus {
        outline: none;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        border-bottom: 1px solid #edebe9;
        box-sizing: content-box;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        height: 42px;
        line-height: 42px;
        min-width: 100%;
        padding-bottom: 1px;
        padding-top: 16px;
        position: relative;
        user-select: none;
        vertical-align: top;
        white-space: nowrap;
      }
      &:hover .ms-DetailsHeader-check {
        opacity: 1;
      }
      & .ms-TooltipHost .ms-DetailsHeader-checkTooltip {
        display: block;
      }
      & .ms-DetailsHeader-cellIsCheck {
        visibility: hidden;
      }
  data-automationid="DetailsHeader"
  data-focuszone-id="FocusZone3"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  onMouseMove={[Function]}
  role="row"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <div
    aria-colindex={1}
    aria-labelledby="header2-check"
    className=
        ms-DetailsHeader-cell
        ms-DetailsHeader-cellIsCheck
        {
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          outline: transparent;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
    role="columnheader"
  >
    <span
      className=
          ms-DetailsHeader-checkTooltip

    >
      <div
        className=
            ms-DetailsRow-check
            ms-DetailsHeader-check
            ms-DetailsRow-check--isDisabled
            ms-DetailsRow-check--isHeader
            ms-Check-checkHost
            {
              height: 42px;
            }
            .ms-Fabric--isFocusVisible &:focus {
              opacity: 1;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              background: none;
              border: none;
              box-sizing: border-box;
              cursor: default;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              height: 42px;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              outline: transparent;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              vertical-align: top;
              width: 48px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        id="header2-check"
      />
    </span>
  </div>
  <div
    aria-colindex={2}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="a"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-haspopup={false}
        aria-labelledby="header2-a-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header2-a"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header2-a-name"
        >
          a
        </span>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={3}
    aria-sort="ascending"
    className=
        ms-DetailsHeader-cell
        is-actionable
        is-icon-visible
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="b"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-haspopup={false}
        aria-labelledby="header2-b-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header2-b"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header2-b-name"
        >
          b
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #605e5c;
                opacity: 1;
                padding-left: 4px;
                position: relative;
                top: 1px;
              }
          data-icon-name="SortUp"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={4}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="c"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 30,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-expanded={false}
        aria-haspopup={true}
        aria-labelledby="header2-c-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header2-c"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header2-c-name"
        >
          c
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-DetailsHeader-filterChevron
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #a19f9d;
                font-size: 12px;
                padding-left: 6px;
                vertical-align: middle;
              }
          data-icon-name="ChevronDown"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0px;
          margin-left: -16px;
          margin-right: 0px;
          margin-top: 0px;
        }
    data-is-focusable={false}
    data-sizer-index={2}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
</div>
`;

exports[`DetailsHeader renders accessible labels 1`] = `
<div
  className=
      ms-FocusZone
      ms-DetailsHeader
      &:focus {
        outline: none;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        border-bottom: 1px solid #edebe9;
        box-sizing: content-box;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        height: 42px;
        line-height: 42px;
        min-width: 100%;
        padding-bottom: 1px;
        padding-top: 16px;
        position: relative;
        user-select: none;
        vertical-align: top;
        white-space: nowrap;
      }
      &:hover .ms-DetailsHeader-check {
        opacity: 1;
      }
      & .ms-TooltipHost .ms-DetailsHeader-checkTooltip {
        display: block;
      }
  data-automationid="DetailsHeader"
  data-focuszone-id="FocusZone7"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  onMouseMove={[Function]}
  role="row"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <div
    aria-colindex={1}
    aria-labelledby="header6-check"
    className=
        ms-DetailsHeader-cell
        ms-DetailsHeader-cellIsCheck
        {
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          outline: transparent;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
    onClick={[Function]}
    role="columnheader"
  >
    <span
      className=
          ms-DetailsHeader-checkTooltip

    >
      <div
        aria-checked={false}
        className=
            ms-DetailsRow-check
            ms-DetailsHeader-check
            ms-DetailsRow-check--isHeader
            ms-Check-checkHost
            {
              height: 42px;
            }
            .ms-Fabric--isFocusVisible &:focus {
              opacity: 1;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              background: none;
              border: none;
              box-sizing: border-box;
              cursor: default;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              height: 42px;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              outline: transparent;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              vertical-align: top;
              width: 48px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-automationid="DetailsRowCheck"
        data-is-focusable={true}
        data-selection-toggle={true}
        id="header6-check"
        role="checkbox"
      >
        <div
          className=
              ms-Check
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 18px;
                line-height: 1;
                position: relative;
                user-select: none;
                vertical-align: top;
                width: 18px;
              }
              &:before {
                background: #ffffff;
                border-radius: 50%;
                bottom: 1px;
                content: "";
                left: 1px;
                opacity: 1;
                position: absolute;
                right: 1px;
                top: 1px;
              }
              .ms-Check-checkHost:hover & {
                opacity: 1;
              }
              .ms-Check-checkHost:focus & {
                opacity: 1;
              }
              &:hover {
                opacity: 1;
              }
              &:focus {
                opacity: 1;
              }
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Check-circle
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #605e5c;
                  font-size: 18px;
                  height: 18px;
                  left: 0px;
                  position: absolute;
                  text-align: center;
                  top: 0px;
                  vertical-align: middle;
                  width: 18px;
                }
                @media screen and (-ms-high-contrast: active){& {
                  color: WindowText;
                }
            data-icon-name="CircleRing"
            role="presentation"
          >
            
          </i>
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Check-check
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  color: #605e5c;
                  font-size: 16px;
                  height: 18px;
                  left: .5px;
                  opacity: 0;
                  position: absolute;
                  text-align: center;
                  top: 0px;
                  vertical-align: middle;
                  width: 18px;
                }
                &:hover {
                  opacity: 1;
                }
                @media screen and (-ms-high-contrast: active){& {
                  -ms-high-contrast-adjust: none;
                }
            data-icon-name="StatusCircleCheckmark"
            role="presentation"
          >
            
          </i>
        </div>
      </div>
    </span>
  </div>
  <div
    aria-colindex={2}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="a"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-haspopup={false}
        aria-labelledby="header6-a-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header6-a"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header6-a-name"
        >
          a
        </span>
      </span>
    </span>
  </div>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={3}
    aria-sort="ascending"
    className=
        ms-DetailsHeader-cell
        is-actionable
        is-icon-visible
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="b"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 220,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-describedby="header6-b-tooltip"
        aria-haspopup={false}
        aria-labelledby="header6-b-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header6-b"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header6-b-name"
        >
          b
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #605e5c;
                opacity: 1;
                padding-left: 4px;
                position: relative;
                top: 1px;
              }
          data-icon-name="SortUp"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <label
    className=

        {
          border: 0px;
          height: 1px;
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          overflow: hidden;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: absolute;
          width: 1px;
        }
    id="header6-b-tooltip"
  >
    Click to sort.
    Sorted up.
  </label>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0;
          margin-left: -8px;
          margin-right: -8px;
          margin-top: 0;
        }
    data-is-focusable={false}
    data-sizer-index={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
  <div
    aria-colindex={4}
    aria-sort="none"
    className=
        ms-DetailsHeader-cell
        is-actionable
        is-icon-visible
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 12px;
          font-weight: 400;
          height: 42px;
          line-height: inherit;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 12px;
          padding-right: 8px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-overflow: ellipsis;
          vertical-align: top;
          white-space: nowrap;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        &:hover {
          background: #f3f2f1;
          color: #323130;
        }
        &:active {
          background: #edebe9;
        }
        &:hover i[data-icon-name="GripperBarVertical"] {
          display: block;
        }
    data-automationid="ColumnsHeaderColumn"
    data-is-draggable={false}
    data-item-key="c"
    draggable={false}
    role="columnheader"
    style={
      Object {
        "width": 30,
      }
    }
  >
    <span
      className=

          {
            bottom: 0px;
            display: block;
            left: 0px;
            position: absolute;
            right: 0px;
            top: 0px;
          }
    >
      <span
        aria-describedby="header6-c-tooltip"
        aria-expanded={false}
        aria-haspopup={true}
        aria-labelledby="header6-c-name"
        className=
            ms-DetailsHeader-cellTitle
            {
              align-items: stretch;
              box-sizing: border-box;
              display: flex;
              flex-direction: row;
              justify-content: flex-start;
              outline: transparent;
              overflow: hidden;
              padding-bottom: 0;
              padding-left: 12px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
        data-is-focusable={true}
        id="header6-c"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className=
              ms-DetailsHeader-cellName
              {
                flex: 0 1 auto;
                font-size: 14px;
                font-weight: 600;
                overflow: hidden;
                text-overflow: ellipsis;
              }
          id="header6-c-name"
        >
          c
        </span>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-DetailsColumn-nearIcon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #605e5c;
                opacity: 1;
                padding-left: 8px;
              }
          data-icon-name="Filter"
          role="presentation"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-DetailsColumn-nearIcon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons-7";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #605e5c;
                opacity: 1;
                padding-left: 8px;
              }
          data-icon-name="GroupedDescending"
          role="presentation"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-DetailsHeader-filterChevron
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                color: #a19f9d;
                font-size: 12px;
                padding-left: 6px;
                vertical-align: middle;
              }
          data-icon-name="ChevronDown"
          role="presentation"
        >
          
        </i>
      </span>
    </span>
  </div>
  <label
    className=

        {
          border: 0px;
          height: 1px;
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          overflow: hidden;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: absolute;
          width: 1px;
        }
    id="header6-c-tooltip"
  >
    Click to sort, filter, or group.
    Filtered.
    Grouped.
  </label>
  <div
    aria-hidden={true}
    className=
        ms-DetailsHeader-cellSizer
        {
          background: transparent;
          bottom: 0px;
          cursor: ew-resize;
          display: inline-block;
          height: inherit;
          outline: transparent;
          overflow: hidden;
          position: relative;
          top: 0px;
          width: 16px;
          z-index: 1;
        }
        &::-moz-focus-inner {
          border: 0px;
        }
        &:after {
          background: #c8c6c4;
          bottom: 0px;
          content: "";
          left: 50%;
          opacity: 0;
          position: absolute;
          top: 0px;
          width: 1px;
        }
        &:focus:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &:hover:after {
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        &.is-resizing:after {
          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
          opacity: 1;
          transition: opacity 0.3s linear;
        }
        {
          margin-bottom: 0px;
          margin-left: -16px;
          margin-right: 0px;
          margin-top: 0px;
        }
    data-is-focusable={false}
    data-sizer-index={2}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="button"
  />
</div>
`;
